app/customer-dashboard/components/customer-details.component.scss
.status {
    height: 20px;
    width: 20px;
    background: red;
    margin: 8px 10px 0 0;
    display: block;
    border-radius: 50%;
    &.Active {
        background: greenyellow;
    }
    &.Hold{
        background: orange;
    }
    &.Closed{
        background: blue;
    }
    &.Enquiry{
        background:gray;
    }
 
}

.mat-success {
    background-color: green;
    color: #fff;
}

.wrapper{
    min-height: 100vh;
    background: #ccc;
    display: flex;
    flex-direction: column;
  }
  .header, .footer{
    height: 50px;
    background: #666;
    color: #fff;
  }
  .column {
    display: flex;
    flex-direction: column;
    flex: 2;
    width: 100px;
    margin: 0;
    border: 0.2px solid #dce5f2;

      }
  .row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    border: 0.2px solid #dce5f2;
  }
  .rowHeader{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    height: 40px;
    background:cornflowerblue;
    color: #fff;
    border-radius: 2px;
    border: 0.2px solid #dce5f2;
  }

